--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.0
   dio: ^5.4.2
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
