--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.0
   dio: ^5.4.2
   font_awesome_flutter: ^10.7.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
